--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,29 @@
-name: CI/CD Pipeline for Flask App
+name: Deploy to Render
 
 on:
   push:
     branches:
-      - main  # Runs only when code is pushed to `main`
+      - main  # Change this to your deployment branch
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     
     steps:
-      - name: 🚀 Checkout Repository
-        uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - name: 📦 Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.10  # Use your required Python version
-
-      - name: 📥 Install Dependencies
+      - name: Install Dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -r requirements.txt  # Install required dependencies
 
 
-      - name: 📤 Deploy to Render
+      - name: Deploy to Render
         env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}  # Secure API Key
-          SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}  # Render Service ID
+          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
         run: |
-          curl -X POST "https://api.render.com/v1/services/$SERVICE_ID/deploys" \
+          curl -X POST "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
           -H "Authorization: Bearer $RENDER_API_KEY" \
           -H "Accept: application/json" \
           -d ''
-
