--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,20 +3,25 @@ name: Deploy to Render
 on:
   push:
     branches:
-      - main  # Change this to your deployment branch
+      - main  # Make sure this is your actual deployment branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'  # Use the Python version your project needs
+
       - name: Install Dependencies
         run: |
-          pip install -r requirements.txt  # Install required dependencies
-
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Deploy to Render
         env:
@@ -26,4 +31,4 @@ jobs:
           curl -X POST "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
           -H "Authorization: Bearer $RENDER_API_KEY" \
           -H "Accept: application/json" \
-          -d ''
+          -d '{}'
